--- a/styles.css
+++ b/styles.css
@@ -14,15 +14,20 @@ h1 {
     color: #FFF;
     text-align: center;
     font-family: resonantWoodsFont;
-    font-size: 45.561px;
+    font-size: 6vw;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-bottom: 48.28px;
+    margin-bottom: 2rem;
 }
 
 .featured-track {
-    margin-bottom: 62px;    
+    margin-bottom: 2.5rem;
+    -ms-transform: scale(0.75);
+    -moz-transform: scale(0.75);
+    -o-transform: scale(0.75);
+    -webkit-transform: scale(0.75);
+    transform: scale(0.75);
 }
 
 .button-links {
@@ -31,13 +36,15 @@ h1 {
     justify-content: space-evenly;
     align-items: center;
     margin: 0 auto;
+    max-width: 350px;
+    width: 100%;
 }
 
 a {
     border-radius: 29px;
     border: 4px solid #FFF;
-    width: 222px;
-    height: 40px;
+    width: 75%;
+    height: 50px;
     flex-shrink: 0;
     text-decoration: none;
     display: flex;
@@ -51,7 +58,7 @@ a h2 {
     color: #FFF;
     text-align: center;
     font-family: Inter;
-    font-size: 16.8px;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 400;
     width: 70%;
