--- a/styles.css
+++ b/styles.css
@@ -18,18 +18,13 @@ h1 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-bottom: 2.2rem;
-    margin-top: 2.2rem;
+    margin-bottom: 1.5rem;
+    margin-top: 2rem;
 }
 
-@media only screen and (max-width: 600px) {
-    h1 {
-        font-size: 15vw;
-    }
-}
 
 .featured-track {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.8rem;
     -ms-transform: scale(0.85);
     -moz-transform: scale(0.85);
     -o-transform: scale(0.85);
@@ -51,7 +46,7 @@ a {
     border-radius: 29px;
     border: 4px solid #FFF;
     width: 75%;
-    height: 50px;
+    height: 40px;
     flex-shrink: 0;
     text-decoration: none;
     display: flex;
@@ -73,6 +68,25 @@ a h2 {
 
 a img {
     margin-left: 1.25rem;
-    height: 40px;
-    width: 40px;
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 15vw;
+        margin-bottom: 2.2rem;
+    }
+
+    .featured-track {
+        margin-bottom: 2.5rem;
+        margin-top: 2.5rem;
+    }
+
+    a {
+        height: 50px;
+    }
+
+    a img {
+        height: 40px;
+        width: 40px;
+    }
 }
